--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vitepress dev config",
     "build": "vitepress build config",
     "preview": "vitepress preview config"
@@ -18,6 +17,7 @@
     "vitepress": "2.0.0-alpha.15"
   },
   "dependencies": {
-    "markdown-it-mathjax3": "^4.3.2"
+    "markdown-it-mathjax3": "^4.3.2",
+    "vue": "^3.5.26"
   }
 }
